--- a/client/views/index.html
+++ b/client/views/index.html
@@ -8,12 +8,13 @@
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
 
     <script type="text/javascript" src="/scripts/main.js"></script>
-    <script type="text/javascript" src="/scripts/controllers/AddPlaymateController.js"></script>
+    <script type="text/javascript" src="/scripts/controllers/PlaymateController.js"></script>
 
 
   </head>
   <body ng-app="myApp" >
     <a href="#addplaymate">add playmate</a>
+    <a href="#showplaymates">show playmates</a>
     <main ng-view></main>
 
   </body>
