get route and display to DOM is now functional

--- a/client/views/showplaymates.html
+++ b/client/views/showplaymates.html
@@ -1,6 +1,6 @@
 <h1>Show Playmates</h1>
 
-<div ng-repeat="playmates in allPlaymates">
+<div ng-repeat="playmate in allPlaymates">
   <p> {{ playmate.name }} </p>
   <p> {{ playmate.breed }} </p>
   <p> {{ playmate.age }} </p>
