--- a/client/views/index.html
+++ b/client/views/index.html
@@ -15,6 +15,8 @@
   <body ng-app="myApp" >
     <a href="#addplaymate">add playmate</a>
     <a href="#showplaymates">show playmates</a>
+    <a href="#favorites">favorites</a>
+
     <main ng-view></main>
 
   </body>
