--- a/client/views/favorites.html
+++ b/client/views/favorites.html
@@ -1,1 +1,13 @@
 <h1>favorites</h1>
+
+<div ng-repeat="playmate in favePlaymates">
+  <p>
+    {{ playmate.name }},
+    {{ playmate.breed }},
+    {{ playmate.age }},
+    {{ playmate.gender }},
+    {{ playmate.sterile }},
+    {{ playmate.vaccinated }}
+    <!-- <button type="button" name="button" ng-click="addFave($index)">Add to Favorites</button> -->
+  </p>
+</div>
