--- a/client/views/showplaymates.html
+++ b/client/views/showplaymates.html
@@ -8,6 +8,20 @@
     {{ playmate.gender }},
     {{ playmate.sterile }},
     {{ playmate.vaccinated }}
-    <button type="button" name="button" ng-click="addFave()">Add to Favorites</button>
+    <button type="button" ng-click="addFave($index)">Add to Favorites</button>
+  </p>
+</div>
+
+<h1>favorites</h1>
+
+<div ng-repeat="playmate in favePlaymates">
+  <p>
+    {{ playmate.name }},
+    {{ playmate.breed }},
+    {{ playmate.age }},
+    {{ playmate.gender }},
+    {{ playmate.sterile }},
+    {{ playmate.vaccinated }}
+    <!-- <button type="button" name="button" ng-click="addFave($index)">Add to Favorites</button> -->
   </p>
 </div>
