delete from favorites is functional

--- a/client/views/showplaymates.html
+++ b/client/views/showplaymates.html
@@ -8,6 +8,7 @@
     {{ playmate.gender }},
     {{ playmate.sterile }},
     {{ playmate.vaccinated }}
-    <button type="button" ng-click="addFave($index)">Add to Favorites</button>
+    <button type="button" ng-click="addFave($index)">Add to Faves</button>
+    <button type="button" ng-click="schedulePlaydate($index)">Schedule Playdate</button>
   </p>
 </div>
