--- a/client/views/favorites.html
+++ b/client/views/favorites.html
@@ -1,13 +1,13 @@
 <h1>favorites</h1>
 
-<div ng-repeat="playmate in favePlaymates">
+<div ng-repeat="fave in favePlaymates">
   <p>
-    {{ playmate.name }},
-    {{ playmate.breed }},
-    {{ playmate.age }},
-    {{ playmate.gender }},
-    {{ playmate.sterile }},
-    {{ playmate.vaccinated }}
-    <!-- <button type="button" name="button" ng-click="addFave($index)">Add to Favorites</button> -->
+    {{ fave.name }},
+    {{ fave.breed }},
+    {{ fave.age }},
+    {{ fave.gender }},
+    {{ fave.sterile }},
+    {{ fave.vaccinated }}
+    <button type="button" name="button" ng-click="removeFave(fave.id)">Remove Fave</button>
   </p>
 </div>
