--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>simple crud</title>
+    <title>simple cruddy crud</title>
 
+    <script type="text/javascript" src="/vendors/lodash.min.js"></script>
     <script type="text/javascript" src="/vendors/angular.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
 
+
     <script type="text/javascript" src="/scripts/main.js"></script>
     <script type="text/javascript" src="/scripts/controllers/PlaymateController.js"></script>
+    <script type="text/javascript" src="/vendors/ng-file-upload.min.js"></script>
+
 
 
   </head>
