update image form structure

--- a/client/views/addplaymate.html
+++ b/client/views/addplaymate.html
@@ -1,11 +1,6 @@
 <h1>Add Playmate</h1>
 
-
-
-
-
-<form role="form">
-
+<form name="form" class="listItem">
   <div class="listHeader">
     Add a profile pic!
   </div>
@@ -16,9 +11,10 @@
     <input type="text" ng-model="comment" placeholder="Add comment.. location, which plant is it in the picture, etc. " class="u-full-width" />
     <button type="submit" ng-click="submit()">Upload</button>
   </div>
+</form>
 
 
-
+<form role="form">
 
   <div class="form-group">
     <label>Name:</label>
