--- a/client/views/addplaymate.html
+++ b/client/views/addplaymate.html
@@ -1,6 +1,6 @@
 <h1>Add Playmate</h1>
 
-<form name="form" class="listItem">
+<!-- <form name="form" class="listItem">
   <div class="listHeader">
     Add a profile pic!
   </div>
@@ -11,10 +11,21 @@
     <input type="text" ng-model="comment" placeholder="Add comment.. location, which plant is it in the picture, etc. " class="u-full-width" />
     <button type="submit" ng-click="submit()">Upload</button>
   </div>
-</form>
+</form> -->
 
 
-<form role="form">
+<form role="form" name="form">
+
+  <div class="form-group">
+    <label>Upload Image:</label>
+    <div ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 800, height: 800}">
+      <button>Select Picture</button>
+      <span class="fileSelect"> {{file.$ngfName}} </span>
+      <img ngf-thumbnail="file || '/images/upload.svg'">
+    </div>
+    <input type="text" ng-model="comment" placeholder="Add comment" class="u-full-width" />
+    <!-- <button type="submit" ng-click="submit()">Upload</button> -->
+  </div>
 
   <div class="form-group">
     <label>Name:</label>
@@ -48,5 +59,6 @@
   </div>
 </form>
 <div>
-  <button id="addButton" ng-click="addPlaymate()" type="submit" class="btn btn-danger">Add Playmate</button>
+  <button type="submit" ng-click="submit()">Submit</button>
+  <!-- <button id="addButton" ng-click="upload()" type="submit" class="btn btn-danger">Add Playmate</button> -->
 </div>
