image route to favorites successful

--- a/client/views/showplaymates.html
+++ b/client/views/showplaymates.html
@@ -2,7 +2,7 @@
 
 <div ng-repeat="playmate in allPlaymates">
   <div class="playmate-profile">
-    <img ng-src="{{ playmate.location }}">
+    <img class="img-square img-responsive" ng-src="{{ playmate.location }}">
   </div>
   <p>
     {{ playmate.name }},
