--- a/client/views/favorites.html
+++ b/client/views/favorites.html
@@ -1,6 +1,9 @@
 <h1>favorites</h1>
 
 <div ng-repeat="fave in favePlaymates">
+  <div class="playmate-profile">
+    <img class="img-square img-responsive" ng-src="{{ fave.location }}">
+  </div>
   <p>
     {{ fave.name }},
     {{ fave.breed }},
