--- a/client/views/index.html
+++ b/client/views/index.html
@@ -13,6 +13,8 @@
     <script type="text/javascript" src="/scripts/controllers/PlaymateController.js"></script>
     <script type="text/javascript" src="/vendors/ng-file-upload.min.js"></script>
 
+    <link rel="stylesheet" href="/vendors/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/css/stylesheet.css" media="screen" title="no title" charset="utf-8">
 
 
   </head>
