--- a/client/views/addplaymate.html
+++ b/client/views/addplaymate.html
@@ -2,50 +2,60 @@
   <h1>Add Playmate</h1>
 
   <form role="form" name="form">
-  <div class="form-group">
-    <label>Upload Image:</label>
-    <div ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 800, height: 800}">
-      <button>Select Picture</button>
-      <span class="fileSelect"> {{file.$ngfName}} </span>
-      <img ngf-thumbnail="file || '/images/upload.svg'">
+    <div class="form-group">
+      <label>Upload Image:</label>
+      <div ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 800, height: 800}">
+        <button>Select Picture</button>
+        <span class="fileSelect"> {{file.$ngfName}} </span>
+        <img ngf-thumbnail="file || '/images/upload.svg'">
+      </div>
     </div>
-    <input type="text" ng-model="comment" placeholder="Add comment" class="u-full-width" />
-    <!-- <button type="submit" ng-click="submit()">Upload</button> -->
-  </div>
 
-  <div class="form-group">
-    <label>Name:</label>
-    <input type="text" class="form-control" ng-model="nameIn" placeholder="Name">
-  </div>
-  <div class="form-group">
-    <label>Breed:</label>
-    <input type="text" class="form-control" ng-model="breedIn" placeholder="Breed">
-  </div>
-  <div class="form-group">
-    <label>Age:</label>
-    <input type="text" class="form-control" ng-model="ageIn" placeholder="Age">
-  </div>
-  <div class="form-group">
-    <label>
-      <input type="radio" class="form-control" ng-model="genderIn" value="male"> Male
-    </label>
-    <label>
-      <input type="radio" class="form-control" ng-model="genderIn" value="female"> Female
-    </label>
-  </div>
-  <div class="form-group">
-    <label>
-      <input type="checkbox" class="form-control" ng-model="sterileIn" value="yes"> Neutered or Spayed
-    </label>
-  </div>
-  <div class="form-group">
-    <label>
-      <input type="checkbox" class="form-control" ng-model="vaccinatedIn" value="yes"> Vaccinated
-    </label>
-  </div>
+    <div class="form-group">
+      <label>Name:</label>
+      <input type="text" class="form-control" ng-model="nameIn" placeholder="Name">
+    </div>
+    <div class="form-group">
+      <label>Breed:</label>
+      <input type="text" class="form-control" ng-model="breedIn" placeholder="Breed">
+    </div>
+    <div class="form-group">
+      <label>Age:</label>
+      <input type="text" class="form-control" ng-model="ageIn" placeholder="Age">
+    </div>
+    <div class="form-group">
+      <label for="gender">Gender:</label>
+      <select id="gender" ng-model="genderIn">
+        <option value="female">female</option>
+        <option value="male">male</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>
+        <input type="checkbox" class="form-control" ng-model="sterileIn" value="yes"> Neutered or Spayed
+      </label>
+    </div>
+    <div class="form-group">
+      <label>
+        <input type="checkbox" class="form-control" ng-model="vaccinatedIn" value="yes"> Vaccinated
+      </label>
+    </div>
+    <div class="form-group">
+      <label for="size">Size (lbs):</label>
+      <select id="size" ng-model="sizeIn">
+        <option value="xs">XS (>10)</option>
+        <option value="s">S (10-25)</option>
+        <option value="m">M (20-50)</option>
+        <option value="l">L (50-75)</option>
+        <option value="xl">XL (75-90)</option>
+        <option value="xxl">XXL (90+)</option>
+      </select>
+    </div>
+
+
+
   </form>
   <div>
-  <button type="submit" ng-click="submit()">Submit</button>
-  <!-- <button id="addButton" ng-click="upload()" type="submit" class="btn btn-danger">Add Playmate</button> -->
+    <button type="submit" ng-click="submit()">Submit</button>
   </div>
 </div>
