hardcode array sending successfully to db

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="/scripts/main.js"></script>
     <script type="text/javascript" src="/scripts/controllers/PlaymateController.js"></script>
     <script type="text/javascript" src="/vendors/ng-file-upload.min.js"></script>
+    <script type="text/javascript" src="/vendors/angular-checkboxes.js"></script>
+
 
 
     <link rel="stylesheet" href="/vendors/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
