--- a/client/views/addplaymate.html
+++ b/client/views/addplaymate.html
@@ -52,10 +52,24 @@
       </select>
     </div>
 
+    <div mt-to="checkboxList">
+      <ul>
+        <li class="checkbox">
+          <label>
+            <input type="checkbox" mt-checkbox="'Cheerleader'" />Cheerleader
+          </label>
+        </li>
+        <li class="checkbox">
+          <label>
+            <input type="checkbox" mt-checkbox="'Body Slammer'" />Body Slammer
+          </label>
+        </li>
+      </ul>
+    </div>
 
 
   </form>
   <div>
-    <button type="submit" ng-click="submit()">Submit</button>
+    <button type="submit" ng-click="submit(value)">Submit</button>
   </div>
 </div>
