checklist of playstyles sending successfully to db

--- a/client/views/addplaymate.html
+++ b/client/views/addplaymate.html
@@ -52,7 +52,7 @@
       </select>
     </div>
 
-    <div mt-to="checkboxList">
+    <div mt-to="playstyles">
       <ul>
         <li class="checkbox">
           <label>
