add playmate profile view

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -23,9 +23,9 @@
 
   </head>
   <body ng-app="myApp" >
-    <a href="#addplaymate">add playmate</a>
+    <!-- <a href="#addplaymate">add playmate</a>
     <a href="#showplaymates">show playmates</a>
-    <a href="#favorites">favorites</a>
+    <a href="#favorites">favorites</a> -->
 
     <main ng-view></main>
 
