add more input fields to form

--- a/client/views/addplaymate.html
+++ b/client/views/addplaymate.html
@@ -36,12 +36,12 @@
     <div class="form-group">
       <label for="size">Size (lbs):</label>
       <select id="size" ng-model="sizeIn">
-        <option value="xs">XS (>10)</option>
-        <option value="s">S (10-25)</option>
-        <option value="m">M (20-50)</option>
-        <option value="l">L (50-75)</option>
-        <option value="xl">XL (75-90)</option>
-        <option value="xxl">XXL (90+)</option>
+        <option value="XS: less than 10 lbs">XS (>10)</option>
+        <option value="Small: 10-25 lbs">S (10-25)</option>
+        <option value="Medium: 20-50 lbs">M (20-50)</option>
+        <option value="Large: 50-75 lbs">L (50-75)</option>
+        <option value="XL: 75-90 lbs">XL (75-90)</option>
+        <option value="XXL: 90+ lbs">XXL: (90+)</option>
       </select>
     </div>
 
