--- a/client/views/allplaymates.html
+++ b/client/views/allplaymates.html
@@ -11,6 +11,9 @@
     {{ playmate.gender }},
     {{ playmate.sterile }},
     {{ playmate.vaccinated }}
+    {{ playmate.size }}
+    {{ playmate.bio }}
+    {{ playmate.playstyles }}
     <button type="button" ng-click="addFave($index)">Add to Faves</button>
     <button type="button" ng-click="schedulePlaydate($index)">Schedule Playdate</button>
   </p>
