--- a/client/views/favorites.html
+++ b/client/views/favorites.html
@@ -11,6 +11,9 @@
     {{ fave.gender }},
     {{ fave.sterile }},
     {{ fave.vaccinated }}
+    {{ fave.size }}
+    {{ fave.bio }}
+    {{ fave.playstyles }}
     <button type="button" name="button" ng-click="removeFave(fave.id)">Remove Fave</button>
   </p>
 </div>
