--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -1,4 +1,3 @@
-<h1>profile view! helllloooo! </h1>
 
 
 <div ng-repeat="profile in playmateProfile">
@@ -12,9 +11,11 @@
     {{ profile.gender }},
     {{ profile.sterile }},
     {{ profile.vaccinated }}
+    {{ profile.size }}
+    {{ profile.bio }}
+    {{ profile.playstyles }}
   </p>
   <a href="#matches"><button class="btn" type="button" name="button">Find Matching Playmates</button></a>
   <a href="#allplaymates"><button class="btn" type="button" name="button">View All Playmates</button></a>
-
 
 </div>
