--- a/client/views/home.html
+++ b/client/views/home.html
@@ -17,6 +17,6 @@
   <div>
     <h2>Browse Playmates</h2>
     <p>Skip adding a profile and find playmates!</p>
-    <a href="#showplaymates"><button class="btn" type="button" name="button">Browse Playmates</button></a>
+    <a href="#allplaymates"><button class="btn" type="button" name="button">Browse Playmates</button></a>
   </div>
 </div>
