--- a/client/views/index.html
+++ b/client/views/index.html
@@ -15,8 +15,10 @@
 
     <script type="text/javascript" src="/scripts/main.js"></script>
 
+    <script type="text/javascript" src="/scripts/controllers/MatchController.js"></script>
     <script type="text/javascript" src="/scripts/controllers/ProfileController.js"></script>
     <script type="text/javascript" src="/scripts/controllers/PlaymateController.js"></script>
+
 
 
 
