--- a/client/views/matches.html
+++ b/client/views/matches.html
@@ -1,6 +1,24 @@
-<div class="container">
+<div class="container" ng-repeat="profile in playmateProfile">
   <div class="jumbotron">
-    <h1>Playmate Matches for {{ profile.name }}</h1>
+    <h1> {{ profile.name }}'s Playmate Matches </h1>
   </div>
+</div>
 
+<div class="container" ng-repeat="playmate in allPlaymates">
+  <div class="playmate-profile">
+    <img class="img-square img-responsive" ng-src="{{ playmate.location }}">
+  </div>
+  <p>
+    {{ playmate.name }},
+    {{ playmate.breed }},
+    {{ playmate.age }},
+    {{ playmate.gender }},
+    {{ playmate.sterile }},
+    {{ playmate.vaccinated }}
+    {{ playmate.size }}
+    {{ playmate.bio }}
+    {{ playmate.playstyles }}
+    <button type="button" ng-click="addFave($index)">Add to Faves</button>
+    <button type="button" ng-click="schedulePlaydate($index)">Schedule Playdate</button>
+  </p>
 </div>
