--- a/client/views/matches.html
+++ b/client/views/matches.html
@@ -17,7 +17,9 @@
     {{ playmate.vaccinated }}
     {{ playmate.size }}
     {{ playmate.bio }}
-    {{ playmate.playstyles }}
+    {{ playmate.playstyles[0] }}
+    {{ playmate.playstyles[1] }}
+    {{ playmate.playstyles[2] }}
     <button type="button" ng-click="addFave($index)">Add to Faves</button>
     <button type="button" ng-click="schedulePlaydate($index)">Schedule Playdate</button>
   </p>
