able to access matches

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -28,9 +28,10 @@
 
   </head>
   <body ng-app="myApp" >
-    <!-- <a href="#addplaymate">add playmate</a>
-    <a href="#showplaymates">show playmates</a>
-    <a href="#favorites">favorites</a> -->
+    <a href="#addplaymate">add playmate</a>
+    <a href="#allplaymates">all playmates</a>
+    <a href="#favorites">favorites</a>
+    <a href="#matches">matches</a>
 
     <main ng-view></main>
 
