custom matches kind of works

--- a/client/views/addplaymate.html
+++ b/client/views/addplaymate.html
@@ -61,7 +61,7 @@
     </div>
 
     <div mt-to="playstyles">
-      <label>Playstyles (Choose 3):</label>
+      <label>Playstyles (Choose up to 3):</label>
       <ul>
         <li class="checkbox">
           <label>
