--- a/client/views/matches.html
+++ b/client/views/matches.html
@@ -8,7 +8,7 @@
       <li class="playmate-profile"><img class="img-square img-responsive" ng-src="{{ matches.location }}"></li>
     </ul>
     <p>
-
+      {{ matches.name }},
       {{ matches.breed }},
       {{ matches.age }},
       {{ matches.gender }},
