add style to home but upload picture broken

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,38 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>simple cruddy crud</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PlayBow</title>
     <link rel="stylesheet" href="/vendors/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/css/stylesheet.css" media="screen" title="no title" charset="utf-8">
+  </head>
+  <body ng-app="myApp" >
+    <header ng-include="'/views/partials/header.html'"></header>
+    <div id="wrap">
+      <div id="main" class="clear-top">
+        <main ng-view></main>
+      </div>
+    <div id="wrap">
+    <footer class="footer" ng-include="'/views/partials/footer.html'"></footer>
 
+
+    <script type="text/javascript" src="/vendors/angular.js"></script>
+
+    <script type="text/javascript" src="/vendors/angular-animate.min.js"></script>
+    <script type="text/javascript" src="/vendors/angular-aria.min.js"></script>
+    <script type="text/javascript" src="/vendors/angular-material.min.js"></script>
+    <script type="text/javascript" src="/vendors/angular-messages.min.js"></script>
+    <script src="http://ngmaterial.assets.s3.amazonaws.com/svg-assets-cache.js"></script>
     <script type="text/javascript" src="/vendors/lodash.min.js"></script>
-    <script type="text/javascript" src="/vendors/angular.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
     <script type="text/javascript" src="/vendors/ng-file-upload.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-checkboxes.js"></script>
-
-
     <script type="text/javascript" src="/scripts/main.js"></script>
-
     <script type="text/javascript" src="/scripts/controllers/ProfileController.js"></script>
     <script type="text/javascript" src="/scripts/controllers/PlaymateController.js"></script>
-
-
-
-
-
-
-
-
-
-  </head>
-  <body ng-app="myApp" >
-    <a href="#addplaymate">add playmate</a>
-    <a href="#allplaymates">all playmates</a>
-    <a href="#favorites">favorites</a>
-    <a href="#matches">matches</a>
-
-    <main ng-view></main>
-
   </body>
 </html>
