--- a/client/css/stylesheet.css
+++ b/client/css/stylesheet.css
@@ -1,3 +1,268 @@
+body {
+   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+   font-weight: 300;
+   color: #053E59;
+}
+
+/*header*/
+
+.header {
+  background-color: #053E59;
+  text-align: center;
+  padding-top: 70px;
+  padding-bottom: 17px
+}
+
+header[role="banner"] {
+  #logo-main {
+    display: block;
+    margin: 20px auto;
+  }
+}
+
+#navbar-primary.navbar-default {
+  background-color: #FCF1DD;
+  border: none;
+  .navbar-nav {
+    width: 100%;
+    text-align: center;
+    > li {
+      display: inline-block;
+      float: none;
+      > a {
+        padding-left: 30px;
+        padding-right: 30px;
+        }
+    }
+  }
+}
+
+.navbar-default .navbar-nav>li>a {
+  text-align: center;
+  color: #13334c;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+  background-color: #94CC4C;
+  color: #FCF1DD
+}
+
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+  margin: 0;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
+
+/*jumbotron*/
+.hometron {
+  position: relative;
+  background: #000 url("/images/jumbotron-home.jpg") center center;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  overflow: hidden;
+  padding: 10% 0;
+  margin-bottom: 0;
+}
+
+.jumbotron h1 {
+  color: #fff;
+  font-size: 28px;
+
+}
+
+.jumbotron p {
+  color: #fff;
+  font-size: 16px;
+}
+
+/*body*/
+.container {
+  padding-bottom: 40px;
+}
+
 .img-square {
   width: 10%;
+}
+
+/*buttons*/
+button {
+    background-color: #75AD34;
+    border: none;
+    color: #FCF1DD;
+    padding: 10px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+button:hover {
+  background-color: #053E59;
+  color: #FCF1DD;
+}
+
+/*forms*/
+.form-group {
+    margin-bottom: 0;
+    padding: 10px 0;
+    &:first-child { border-color: transparent; }
+}
+
+.form-control {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-width: 2px;
+    min-height: 40px;
+    height: auto;
+    &:focus {
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+}
+.form-vertical {
+    counter-reset: fieldset;
+
+    fieldset {
+        padding-top: 10px;
+        margin: 50px 0;
+
+        > legend:before {
+            content: counter(fieldset);
+            counter-increment: fieldset;
+            position: absolute;
+            left: -25px;
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+            border-radius: 15px;
+            text-align: center;
+            background: $brand-primary;
+            color: white;
+            font-size: 75%;
+            font-weight: bold;
+        }
+    }
+}
+
+label {
+  &.checkbox {
+    margin-bottom: 15px;
+    position: relative;
+
+    .icheckbox_square-blue {
+      position: absolute;
+      top: 0; left: 0;
+    }
+    input {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+    span {
+      padding-left: 35px;
+      display: block;
+    }
+  }
+}
+
+.radio {
+  label {
+    padding-left: 0;
+  }
+  span {
+    vertical-align: middle;
+    margin-left: 5px;
+  }
+}
+
+.btn {
+  height: 40px;
+  padding: 10px 16px;
+  border-radius: 3px;
+  min-width: 80px;
+}
+
+.btn-group.radio-group {
+  .btn {
+    height: 50px;
+    line-height: 22px;
+    padding: 12px 20px;
+    span {
+      line-height: 22px;
+      vertical-align: middle;
+      margin-left: 5px;
+    }
+  }
+}
+
+
+/* bootstrap select styles */
+.bootstrap-select {
+    .btn {
+        min-height: 40px;
+        border-width: 2px;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+        outline: 0;
+        &:hover { background: white; }
+    }
+}
+.bootstrap-select .btn:focus,
+.bootstrap-select.btn-group.open .dropdown-toggle {
+    border-color: $brand-primary;
+//    background: $brand-primary;
+//    color: white;
+    background: white;
+    outline: 0;
+}
+.bootstrap-select .btn.bootstrap-select.btn-group.open .dropdown-toggle {
+    border-color: $brand-primary;
+    color: white;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.dropdown-menu>li>a:hover,
+.dropdown-menu>li>a:focus {
+    background: $brand-primary;
+    color: white;
+}
+
+label { cursor: pointer; }
+:-ms-input-placeholder { color:#ccc; }
+::-moz-placeholder { color:#ccc; }
+::-webkit-input-placeholder { color:#ccc; }
+
+
+/*footer fix to flush to bottom*/
+html, body {
+  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+}
+
+#main {
+  overflow:auto;
+  padding-bottom:150px; /* this needs to be bigger than footer height*/
+}
+
+.footer {
+  position: relative;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  padding-top:20px;
+  background-color: #053E59;
 }
