--- a/client/css/stylesheet.css
+++ b/client/css/stylesheet.css
@@ -1,3 +1,105 @@
-.img-square {
-  width: 10%;
+
+
+/*** HEADER ***/
+.header {
+  background-color: #053E59;
+  text-align: center;
+  padding-top: 70px;
+  padding-bottom: 17px
+}
+
+header[role="banner"] {
+  #logo-main {
+    display: block;
+    margin: 20px auto;
+  }
+}
+
+#navbar-primary.navbar-default {
+  background-color: #FCF1DD;
+  border: none;
+  .navbar-nav {
+    width: 100%;
+    text-align: center;
+    > li {
+      display: inline-block;
+      float: none;
+      > a {
+        padding-left: 30px;
+        padding-right: 30px;
+        }
+    }
+  }
+}
+
+.navbar-default .navbar-nav>li>a {
+  text-align: center;
+  color: #13334c;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+  background-color: #94CC4C;
+  color: #FCF1DD
+}
+
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+  margin: 0;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
+
+/*** JUMBOTRON ***/
+.hometron {
+  position: relative;
+  background: #000 url("/images/jumbotron-home.jpg") center center;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  overflow: hidden;
+  padding: 10% 0;
+  margin-bottom: 0;
+}
+
+.jumbotron h1 {
+  color: #fff;
+  font-size: 28px;
+
+}
+
+.jumbotron p {
+  color: #fff;
+  font-size: 16px;
+}
+
+/*** BUTTONS ***/
+button {
+    background-color: #75AD34;
+    border: none;
+
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 16px;
+    color: #FCF1DD;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+button:hover {
+  background-color: #053E59;
+  color: #FCF1DD;
+}
+
+/*** ADD PLAYMATE BACKGROUND ***/
+.addplaymate {
+  background: #000 url("/images/container-addplaymate.jpg") center center;
 }
