--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,37 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>simple cruddy crud</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PlayBow</title>
     <link rel="stylesheet" href="/vendors/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/css/form-elements.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/css/main.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/css/stylesheet.css" media="screen" title="no title" charset="utf-8">
-
     <script type="text/javascript" src="/vendors/lodash.min.js"></script>
     <script type="text/javascript" src="/vendors/angular.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
     <script type="text/javascript" src="/vendors/ng-file-upload.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-checkboxes.js"></script>
-
-
     <script type="text/javascript" src="/scripts/main.js"></script>
-
     <script type="text/javascript" src="/scripts/controllers/ProfileController.js"></script>
     <script type="text/javascript" src="/scripts/controllers/PlaymateController.js"></script>
-
-
-
-
-
-
-
-
-
   </head>
   <body ng-app="myApp" >
-    <a href="#addplaymate">add playmate</a>
-    <a href="#allplaymates">all playmates</a>
-    <a href="#favorites">favorites</a>
-    <a href="#matches">matches</a>
-
+    <header ng-include="'/views/partials/header.html'"></header>
     <main ng-view></main>
 
   </body>
