--- a/client/views/favorites.html
+++ b/client/views/favorites.html
@@ -8,11 +8,13 @@
     {{ fave.name }},
     {{ fave.breed }},
     {{ fave.age }},
+    {{ fave.bio }}
+    {{ fave.city }},
     {{ fave.gender }},
     {{ fave.sterile }},
     {{ fave.vaccinated }}
     {{ fave.size }}
-    {{ fave.bio }}
+
     {{ fave.playstyles }}
     <button type="button" name="button" ng-click="removeFave(fave.id)">Remove Fave</button>
   </p>
