--- a/client/views/index.html
+++ b/client/views/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PlayBow</title>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/vendors/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/css/form-elements.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/css/main.css" media="screen" title="no title" charset="utf-8">
