add styling to favorites and profile views

--- a/client/css/form-elements.css
+++ b/client/css/form-elements.css
@@ -49,7 +49,7 @@ textarea::-webkit-input-placeholder, textarea.form-control::-webkit-input-placeh
 
 button.btn {
 	height: 40px;
-    background: #75AD34;
+    background: #1abc9c;
 		padding: 10px 16px;
     color: #FCF1DD;
     font-size: 14px;
