delete favorite function working

--- a/client/views/favorites.html
+++ b/client/views/favorites.html
@@ -14,6 +14,6 @@
     {{ fave.size }}
     {{ fave.bio }}
     {{ fave.playstyles }}
-    <button type="button" name="button" ng-click="removeFave(fave.id)">Remove Fave</button>
+    <a class="btn fa" ng-click="removeFave(fave.id)"><i class="fa fa-times" aria-hidden="true"></i></a>
   </p>
 </div>
