--- a/client/views/index.html
+++ b/client/views/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>simple cruddy crud</title>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/vendors/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/css/stylesheet.css" media="screen" title="no title" charset="utf-8">
 
